# matlab-codegen-playground

./: CMakeLists.txt  README.md  local-build.cmd
.github/workflows/: build.yml
src/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  conv.cpp  conv.h  main.cpp  myadd.h  myadd_initialize.cpp  myadd_terminate.cpp  myadd_terminate.h  myadd_types.h  rtw_proj.tmw  rtwtypes.h
src/examples/: main.cpp  main.h
src/interface/: _coder_myadd_api.cpp  _coder_myadd_api.h  _coder_myadd_info.cpp  _coder_myadd_info.h  _coder_myadd_mex.cpp  _coder_myadd_mex.h
src/myadd/: myadd.cpp  myadd_data.h  myadd_initialize.h  rtwtypes.h
